--- a/composer.json
+++ b/composer.json
@@ -46,5 +46,6 @@
   "scripts": {
     "test": "./vendor/bin/phpunit tests",
     "format": "./vendor/bin/php-cs-fixer fix --allow-risky=yes"
-  }
+  },
+  "minimum-stability": "dev"
 }
