Add template.loadFormFields method

--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,8 @@
 /.idea
-/build
+/htdocs
 /vendor
-/examples/database/*
 /composer.lock
-.DS_Store
 composer.phar
 php-scoper.phar
-php-scoper.phar.pubkey
 .php-cs-fixer.cache
 .phpunit.result.cache
